add button, description

--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -24,11 +24,11 @@
       
     </nav>
 
-    <div class="container-md  text-center">
+    <div class="container-md text-center ">
        <div class="row justify-content-center">
             <div class="col-12">
                 <div class="my-4">
-                    <h2 class="">
+                    <h2 class="text-white">
                         MENU PIZZE
                     </h2>
                 </div>
@@ -39,155 +39,171 @@
 
             <!--COL 1-->
 
-            <div class="col-12 col-md-6 col-lg-3 mb-4 ">
+            <div class="col-12 col-md-4 col-lg-4 mb-4 ">
                 <!--card 1 col 1-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
                     <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+                    
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Pepperoni pizza</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 >12.50$</h5>
                     </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark"  type="button">add to cart</button>
+                     
+                    </div>
+
                  </div>
 
-
                 <!--card 2 col 1-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
                     <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Pepperoni pizza</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
                     </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                    </div>
+
                 </div>
 
 
                 <!--card 3 col 1-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
                     <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Pepperoni pizza</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
                     </div>
-                </div>
-             </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
 
-
-            <!--COL 2-->
-
-            <div class="col-12 col-md-6 col-lg-3 mb-4 ">
-                <!--card 1 col 2-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
+
                 </div>
 
-
-                <!--card 2 col 2-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-
-
-                <!--card 3 col 2-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <!--COL 3-->
-
-            <div class="col-12 col-md-6 col-lg-3 mb-4 ">
-                <!--card 1 col 3-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-
-
-                <!--card 2 col 3-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-
-
-                <!--card 3 col 3-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <!--COL 4-->
-
-            <div class="col-12 col-md-6 col-lg-3 mb-4 ">
-                <!--card 1 col 4-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-
-
-                <!--card 2 col 4-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-
-
-                <!--card 3 col 4-->
-                <div class="card shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-             
-
-
-
-
-
-
-
-
-
-
-
-
-
+              
 
 
 
      </div>
+            <div class="col-12 col-md-4 col-lg-4 mb-4 ">
+                <!--card 1 col 1-->
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Pepperoni pizza</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
+                    </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                    </div>
+
+                </div>
+
+                <!--card 2 col 1-->
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Pepperoni pizza</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
+                    </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                    </div>
+
+                </div>
+
+
+                <!--card 3 col 1-->
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Pepperoni pizza</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
+                    </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                    </div>
+
+                </div>
+
+
+
+
+
+            </div>
+            <div class="col-12 col-md-4 col-lg-4 mb-4 ">
+                <!--card 1 col 1-->
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Pepperoni pizza</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
+                    </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                    </div>
+
+                </div>
+
+                <!--card 2 col 1-->
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Pepperoni pizza</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
+                    </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                    </div>
+
+                </div>
+
+
+                <!--card 3 col 1-->
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Pepperoni pizza</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
+                    </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                    </div>
+
+                </div>
+
+
+
+
+
+            </div>
 
 
 
