--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -27,8 +27,8 @@
     <div class="container-md text-center ">
        <div class="row justify-content-center">
             <div class="col-12">
-                <div class="my-4">
-                    <h2 class="text-white">
+                <div class="my-5 ">
+                    <h2 class="text-white p-4">
                         MENU PIZZE
                     </h2>
                 </div>
@@ -94,8 +94,10 @@
 
 
      </div>
+            <!-- col 2-->
+
             <div class="col-12 col-md-4 col-lg-4 mb-4 ">
-                <!--card 1 col 1-->
+                <!--card 1 col 2-->
                 <div class="card  shadow w-75 mb-4 mx-auto shadow">
                     <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
 
@@ -111,24 +113,7 @@
 
                 </div>
 
-                <!--card 2 col 1-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
-
-
-                <!--card 3 col 1-->
+                <!--card 2 col 2-->
                 <div class="card  shadow w-75 mb-4 mx-auto shadow">
                     <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
 
@@ -145,45 +130,7 @@
                 </div>
 
 
-
-
-
-            </div>
-            <div class="col-12 col-md-4 col-lg-4 mb-4 ">
-                <!--card 1 col 1-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
-
-                <!--card 2 col 1-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
-
-
-                <!--card 3 col 1-->
+                <!--card 3 col 2-->
                 <div class="card  shadow w-75 mb-4 mx-auto shadow">
                     <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
 
@@ -205,9 +152,86 @@
 
             </div>
 
+            <!-- col 3-->
+            <div class="col-12 col-md-4 col-lg-4 mb-4 ">
+                <!--card 1 col 3-->
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Pepperoni pizza</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
+                    </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                    </div>
+
+                </div>
+
+                <!--card 2 col 3-->
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Pepperoni pizza</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
+                    </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                    </div>
+
+                </div>
 
 
-   
+                <!--card 3 col 3-->
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Pepperoni pizza</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5>12.50$</h5>
+                    </div>
+                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                    </div>
+
+                </div>
+
+
+
+
+
+              </div>
+           </div>
+         </div>
+            <!--FOOTER-->
+            <footer class="text-center text-light-emphasis bg-dark  ">
+
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="m-5">
+
+                                <h4>la mia pizzeria</h4>
+
+                                <p> Copyright © Your Website 2023</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </footer>
+
+
+            <!-- END FOOTER SECTION-->
 
 
 
@@ -224,7 +248,6 @@
 
 
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
