--- a/LaMiaPizzeria/wwwroot/css/site.css
+++ b/LaMiaPizzeria/wwwroot/css/site.css
@@ -2,12 +2,13 @@
 
 html {
     font-size: 14px;
-   
+  
 }
 
 @media (min-width: 768px) {
   html {
     font-size: 16px;
+
   }
 }
 
@@ -18,7 +19,7 @@ html {
 
 body {
     margin-bottom: 60px;
-    background-color: #352f44;
+    background-color: #ffcd86;
 }
 
 footer{
