--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -15,20 +15,22 @@
     <link href="~/css/site.css" rel="stylesheet"/>
 </head>
 <body>
+    <!--nav bar-->
 
-    <nav class="nav bg-dark text-white">
+    <nav class="nav bg-dark text-white ">
+        
             <a class="navbar-brand ms-3 " href="#">
                 <img src="~/NewFolder/—Pngtree—pizza vector illustration_5333005.png" alt="Logo" width="80" height="50" class="d-inline-block align-text-top">        
             </a>
-       <h4 class=" my-2 mx-3">La mia pizzeria</h4>
-      
+            <h4 class=" my-2 mx-3">La mia pizzeria</h4>
+            
     </nav>
 
     <div class="container-md text-center ">
        <div class="row justify-content-center">
             <div class="col-12">
                 <div class="my-5 ">
-                    <h2 class="text-white p-4">
+                    <h2 class="text-light p-4">
                         MENU PIZZE
                     </h2>
                 </div>
@@ -43,18 +45,19 @@
                 <!--card 1 col 1-->
                 <div class="card  shadow w-75 mb-4 mx-auto shadow">
                     <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-                    
+
                     <div class="card-body">
                         <h5 class="card-title">Pepperoni pizza</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5 >12.50$</h5>
+                        <h5>12.50$</h5>
                     </div>
                     <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark"  type="button">add to cart</button>
-                     
+                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
                     </div>
 
-                 </div>
+                </div>
+
 
                 <!--card 2 col 1-->
                 <div class="card  shadow w-75 mb-4 mx-auto shadow">
