--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -17,204 +17,131 @@
 <body>
     <!--nav bar-->
 
-    <nav class="nav bg-dark text-white ">
+    <nav class="nav  text-white bgi">
         
             <a class="navbar-brand ms-3 " href="#">
-                <img src="~/NewFolder/—Pngtree—pizza vector illustration_5333005.png" alt="Logo" width="80" height="50" class="d-inline-block align-text-top">        
-            </a>
+            <img  src="~/NewFolder/—Pngtree—pizza vector illustration_5333005.png" alt="Logo" width="80" height="50" class="d-inline-block align-text-top">
+        </a>
             <h4 class=" my-2 mx-3">La mia pizzeria</h4>
             
     </nav>
 
-    <div class="container-md text-center ">
+    <div  class="container-md text-center mb-5">
        <div class="row justify-content-center">
             <div class="col-12">
                 <div class="my-5 ">
-                    <h2 class="text-light p-4">
+                    <h2 class="text-dark p-4">
                         MENU PIZZE
                     </h2>
                 </div>
             </div>
         </div>
-
+   
+    
         <div class="row mb-5">
 
-            <!--COL 1-->
+            <div class="col-lg-6 col-md-12">
 
-            <div class="col-12 col-md-4 col-lg-4 mb-4 ">
-                <!--card 1 col 1-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
 
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
+                    <div id="carouselExample" class="carousel slide p-3">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                            <div class="card rounded-4 shadow-sm w-75 p-3 mb-4 mx-auto bg-light">
+                                <img class=" rounded-5" src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                                    <div class="card-body">
+                                        <h5 class="card-title">Pepperoni pizza</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <h5>12.50$</h5>
+                                    </div>
+                                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="card  shadow w-75 p-3 mb-4 mx-auto shadow">
+                                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                                    <div class="card-body">
+                                        <h5 class="card-title">Pepperoni pizza</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <h5>12.50$</h5>
+                                    </div>
+                                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="card  shadow w-75 p-3 mb-4 mx-auto shadow">
+                                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                                    <div class="card-body">
+                                        <h5 class="card-title">Pepperoni pizza</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <h5>12.50$</h5>
+                                    </div>
+                                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="card  shadow w-75 p-3 mb-4 mx-auto shadow">
+                                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                                    <div class="card-body">
+                                        <h5 class="card-title">Pepperoni pizza</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <h5>12.50$</h5>
+                                    </div>
+                                    <div class=" gap-2 d-sm-block d-md-block mb-3">
+                                        <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                       <button class="carousel-control-next carousel-dark" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
+            
+                </div>
+               <div class="col-lg-6 col-md-12 col col-sm-auto">
+                    <div class="my-5 text-lg-start text-md-center text-sm-center ">
+                       <h1 class="">Scegli la tua pizza!</h1>
+                     <p>Solo per oggi consegna gratis</p>
                     </div>
-
                 </div>
 
-
-                <!--card 2 col 1-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
-
-
-                <!--card 3 col 1-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
-
-              
-
-
-
-     </div>
-            <!-- col 2-->
-
-            <div class="col-12 col-md-4 col-lg-4 mb-4 ">
-                <!--card 1 col 2-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
-
-                <!--card 2 col 2-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
-
-
-                <!--card 3 col 2-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
 
 
 
 
 
             </div>
-
-            <!-- col 3-->
-            <div class="col-12 col-md-4 col-lg-4 mb-4 ">
-                <!--card 1 col 3-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
-
-                <!--card 2 col 3-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
-
-
-                <!--card 3 col 3-->
-                <div class="card  shadow w-75 mb-4 mx-auto shadow">
-                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                    <div class="card-body">
-                        <h5 class="card-title">Pepperoni pizza</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <h5>12.50$</h5>
-                    </div>
-                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                    </div>
-
-                </div>
+          </div>
+          
+      
 
 
 
-
-
-              </div>
-           </div>
-         </div>
             <!--FOOTER-->
-            <footer class="text-center text-light-emphasis bg-dark  ">
+            <footer class="text-center text-dark  w mt-5">
 
                 <div class="container-fluid">
                     <div class="row">
@@ -223,7 +150,7 @@
 
                                 <h4>la mia pizzeria</h4>
 
-                                <p> Copyright © Your Website 2023</p>
+                                <p class="mt-5"> Copyright © Your Website 2023</p>
                             </div>
                         </div>
                     </div>
