--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -40,93 +40,176 @@
     
         <div class="row mb-5">
 
-            <div class="col-lg-6 col-md-12">
+            <!--COL 1-->
+              <div class="col-12 col-md-4 col-lg-4 mb-4 ">
+            <!--card 1 col 1-->
+                <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
 
-
-                    <div id="carouselExample" class="carousel slide p-3">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                            <div class="card rounded-4 shadow-sm w-75 p-3 mb-4 mx-auto bg-light">
-                                <img class=" rounded-5" src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                                    <div class="card-body">
-                                        <h5 class="card-title">Pepperoni pizza</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        <h5>12.50$</h5>
-                                    </div>
-                                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="card  shadow w-75 p-3 mb-4 mx-auto shadow">
-                                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                                    <div class="card-body">
-                                        <h5 class="card-title">Pepperoni pizza</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        <h5>12.50$</h5>
-                                    </div>
-                                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="card  shadow w-75 p-3 mb-4 mx-auto shadow">
-                                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                                    <div class="card-body">
-                                        <h5 class="card-title">Pepperoni pizza</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        <h5>12.50$</h5>
-                                    </div>
-                                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="card  shadow w-75 p-3 mb-4 mx-auto shadow">
-                                    <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
-
-                                    <div class="card-body">
-                                        <h5 class="card-title">Pepperoni pizza</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        <h5>12.50$</h5>
-                                    </div>
-                                    <div class=" gap-2 d-sm-block d-md-block mb-3">
-                                        <button class="btn btn-outline-dark" type="button">add to cart</button>
-
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                       <button class="carousel-control-next carousel-dark" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-            
+                <div class="card-body">
+                      <h5 class="card-title">Pepperoni pizza</h5>
+                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5>12.50$</h5>
                 </div>
-               <div class="col-lg-6 col-md-12 col col-sm-auto">
-                    <div class="my-5 text-lg-start text-md-center text-sm-center ">
-                       <h1 class="">Scegli la tua pizza!</h1>
-                     <p>Solo per oggi consegna gratis</p>
-                    </div>
-                </div>
+                <div class=" gap-2 d-sm-block d-md-block mb-3">
+                     <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+            </div>
+
+            </div>
+
+
+            <!--card 2 col 1-->
+            <div class="card  shadow w-75 mb-4 mx-auto shadow">
+               <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+                <div class="card-body">
+                <h5 class="card-title">Pepperoni pizza</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5>12.50$</h5>
+            </div>
+                <div class=" gap-2 d-sm-block d-md-block mb-3">
+                <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+            </div>
+
+            </div>
+
+
+            <!--card 3 col 1-->
+            <div class="card  shadow w-75 mb-4 mx-auto shadow">
+             <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+            <div class="card-body">
+                 <h5 class="card-title">Pepperoni pizza</h5>
+                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                 <h5>12.50$</h5>
+            </div>
+            <div class=" gap-2 d-sm-block d-md-block mb-3">
+                 <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+            </div>
+
+            </div>
+
+
+
+
+
+            </div>
+            <!-- col 2-->
+              <div class="col-12 col-md-4 col-lg-4 mb-4 ">
+            <!--card 1 col 2-->
+            <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                 <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+            <div class="card-body">
+                <h5 class="card-title">Pepperoni pizza</h5>
+                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                 <h5>12.50$</h5>
+            </div>
+               <div class=" gap-2 d-sm-block d-md-block mb-3">
+               <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+            </div>
+
+            </div>
+
+            <!--card 2 col 2-->
+            <div class="card  shadow w-75 mb-4 mx-auto shadow">
+              <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+            <div class="card-body">
+              <h5 class="card-title">Pepperoni pizza</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                 <h5>12.50$</h5>
+            </div>
+            <div class=" gap-2 d-sm-block d-md-block mb-3">
+                 <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+            </div>
+
+            </div>
+
+
+            <!--card 3 col 2-->
+            <div class="card  shadow w-75 mb-4 mx-auto shadow">
+               <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+            <div class="card-body">
+              <h5 class="card-title">Pepperoni pizza</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5>12.50$</h5>
+            </div>
+            <div class=" gap-2 d-sm-block d-md-block mb-3">
+                <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+            </div>
+
+            </div>
+
+
+
+
+
+            </div>
+
+            <!-- col 3-->
+            <div class="col-12 col-md-4 col-lg-4 mb-4 ">
+            <!--card 1 col 3-->
+            <div class="card  shadow w-75 mb-4 mx-auto shadow">
+                <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+            <div class="card-body">
+               <h5 class="card-title">Pepperoni pizza</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5>12.50$</h5>
+            </div>
+            <div class=" gap-2 d-sm-block d-md-block mb-3">
+             <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+            </div>
+
+            </div>
+
+            <!--card 2 col 3-->
+            <div class="card  shadow w-75 mb-4 mx-auto shadow">
+              <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+            <div class="card-body">
+                  <h5 class="card-title">Pepperoni pizza</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5>12.50$</h5>
+            </div>
+              <div class=" gap-2 d-sm-block d-md-block mb-3">
+              <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+            </div>
+
+            </div>
+
+
+            <!--card 3 col 3-->
+            <div class="card  shadow w-75 mb-4 mx-auto shadow">
+               <img src="~/NewFolder/pepperoni_cheese_pizza.jpg" class="card-img-top  " alt="immagine 1">
+
+            <div class="card-body">
+                <h5 class="card-title">Pepperoni pizza</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5>12.50$</h5>
+            </div>
+            <div class=" gap-2 d-sm-block d-md-block mb-3">
+              <button class="btn btn-outline-dark" type="button">add to cart</button>
+
+            </div>
+
+            </div>
+
+
+
+
+
+            </div>
 
 
 
@@ -141,7 +224,7 @@
 
 
             <!--FOOTER-->
-            <footer class="text-center text-dark  w mt-5">
+            <footer class="text-center text-dark bgi mt-5">
 
                 <div class="container-fluid">
                     <div class="row">
